service-endpoint.yaml
apiVersion: v1
kind: Service
metadata:
  name: mroom
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: mroom
