service-mroom-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mroom-http
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  selector:
    app: mroom
