service-mroom.yaml
apiVersion: v1
kind: Service
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  
  - name: https
    port: 443
    targetPort: https
