service-rc.yml
apiVersion: v1
kind: Service
metadata:
  name: mroom-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30123
  selector:
    app: mroom
