kubia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: kubia-test
spec:
  rules:
  - host: foo.99kies.cc
    http:
      paths:
      - path: /
        backend: 
          serviceName: kubia-nodeport
          servicePort: 80
